editing and fixing footnote

--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -22,7 +22,7 @@ affiliation:
     institution   : "Program in Statistical and Data Sciences, Smith College"
 
 abstract: |
-  Empirical evidence has only found links between objectification, self-objectification, and negative outcomes for women within interpersonal interactions between male-female pairs. The purpose of the present study was to extend past research and consider the relationships between objectification and self-objectification within interactions between female pairs. Women were brought into the laboratory and interacted in same-sex dyads. Dyadic analysis was utilized to detect whether partners’ objectification of each other affected state self-objectification, as well as the resulting feelings of comfort and authenticity during the interaction. After the interaction, participants completed a questionnaire measuring, among other things, cognitive performance, career aspirations, and relationship agency. Results revealed a significant positive effect of being objectified by a female partner on women's self-objectification. There was no significant relationship between self-objectification and authenticity. Further, although there were significantly negative effects on career aspirations and relationship agency resulting from a lack of relationship authenticity, there was no evidence that this is due to feelings of sexual objectification. The significant partner effect of objectification on actor self-objectification suggests that women being objectified by other women may result in feelings of self-objectification, and such research has powerful implications for the ways that women interact in both sexual and non-sexual settings.
+  Extant research on interpersonal objectification has focused mostly on links between objectification, self-objectification, and negative outcomes for women within mixed-gender interactions [@gervais2020social; @garcia2016objectification]. The purpose of the present study was to extend past research on interpersonal objectification to interactions between pairs of women. Women were brought into the laboratory and interacted face-to-face in same-sex dyads. Dyadic analysis [@kenny2006dyadic] was utilized to detect whether partners’ objectification of each other affected state self-objectification, as well as the resulting feelings of comfort and authenticity during the interaction. Results revealed a significant positive relationship between being objectified by a woman interaction partner and women’s own self-objectification (a partner effect). There was no significant relationship between self-objectification and interaction inauthenticity. Further, there were significant negative effects of inauthenticity on career aspirations and relationship agency (actor effects). The significant partner effect of objectification on self-objectification suggests that women being objectified by other women may result in feelings of self-objectification, and this finding opens up questions for future research about how interpersonal objectification might function in situations without an immediate male gaze.
   
 keywords          : "keywords"
 
@@ -67,31 +67,31 @@ library(xtable)
 library(rmarkdown)
 ```
     
-@robertsfredrickson Objectification Theory, suggests that, in addition to being steeped in a culture that objectifies women, women are objectified in actual interpersonal encounters. The negative effects of this interpersonal objectification for women are theorized be the strongest when it is a man doing the objectifying [@calogero2004test; @gervais2011you; @gay2010my], but what are the consequences when a woman objectifies another woman in an interaction? Psychological researchers studying the sexual objectification of women, have in recent years explored the interpersonal process of the objectification, finding evidence for self-objectification in the target as a proximal consequence of being objectified [@garcia2016objectification, @strelan2018birds, @riemer2020self]. In a recent review, @gervais2020social organized the extant literature on interpersonal self-objectification and proposed a theoretical model called the Social Interaction Model of Objectification (SIMO), however this model focuses on mixed-gender encounters. Although there is evidence that women objectify other women [@loughnan2015exploring; @puvia2013being], there are currently no studies investigating the process of interpersonal objectification in interactions between women. Is objectification by a female interaction partner related to an increase in self-objectification for the woman being objectified? Further, does objectification by a woman have the same downstream negative consequences for women as being objectified by a male interaction partner? The current study begins to address these questions by investigating interpersonal objectification among interacting pairs where both partners identify as women. 
+@robertsfredrickson Objectification Theory, suggests that, in addition to being steeped in a culture that objectifies women, women are objectified in actual interpersonal encounters. The negative effects of this interpersonal objectification for women are theorized be the strongest when it is a man doing the objectifying [@calogero2004test; @gervais2011you; @gay2010my], but what are the consequences when a woman objectifies another woman in an interaction? Psychological researchers studying the sexual objectification of women, have in recent years explored the interpersonal process of the objectification, finding evidence for *self*-objectification in the target as a proximal consequence of being objectified [@garcia2016objectification; @strelan2018birds; @riemer2020self]. In a recent review, @gervais2020social organized the extant literature on interpersonal self-objectification and proposed a theoretical model called the Social Interaction Model of Objectification (SIMO). The SIMO is useful for studying mixed-gender interactions, but what about interactions among women? Although there is evidence that women objectify other women [@loughnan205exploring; @puvia2013being], studies investigating the process of interpersonal objectification in interactions between women is scarce. 
+
+Is objectification by a female interaction partner related to an increases in self-objectification for the woman being objectified? Further, does objectification by a woman have the same downstream negative consequences for women as being objectified by a male interaction partner? The current study begins to address these questions by investigating interpersonal objectification among interacting pairs where both partners identify as women. 
 
 ##Self-Objectification
-Self-objectification is a psychological process that provides a cognitive mechanism to translate the experiences of interpersonal objectification [@loughnan2015exploring] to negative mental health outcomes (e.g., anxiety, self-esteem, and cognitive performance) [@calogero2011; @moradi2008]. @calogero2011 proposes that self-objectification can be conceptualized as a learned trait, or *trait* self-objectification (TSO). Furthermore, self-objectification can also be elicited momentarily, for example, when viewing sexualized images in movies and magazines [@morry2001magazine], when trying on sexualizing clothing [@fredrickson1998swimsuit], or during video chat when you believe your interaction partner can only see your body [not face; @saguyetal2010]. This momentary self-objectification is referred to as *state* self-objectification [SSO; @bernard2018bodies; @calogero2011; @moradi2008] and is characterized by feeling like a body rather than a full self within a particular moment, instance, or context [@robertsfredrickson]. 
+Self-objectification is a psychological process that provides that translates the experiences of interpersonal objectification [@loughnan2015exploring; @gervais2020social into negative mental health outcomes (e.g., interaction inauthenticity, anxiety, self-esteem, and cognitive performance) [@calogero2011; @moradi2008]. @calogero2011 proposes that self-objectification can be conceptualized as a learned trait, or *trait* self-objectification (TSO), whereby one abopts a habitual third-person perspective on one's own appearance. Furthermore, self-objectification can also be elicited momentarily, for example, when viewing sexualized images in movies and magazines [@morry2001magazine], when trying on sexualizing clothing [@fredrickson1998swimsuit], or during video chat when you believe your interaction partner can only see your body [not face; @saguyetal2010]. This momentary self-objectification is referred to as *state* self-objectification [SSO; @bernard2018bodies; @calogero2011; @moradi2008] and is characterized by feeling like a body rather than a full self within a particular moment, instance, or context. 
 
 There is evidence that being objectified by another person during an interaction elicits SSO. For example, in a face-to-face mixed-gender dyadic study, @garcia2016objectification found that men’s reported objectification of their female interaction partner was associated with increased self-objectification as reported by their female partner. Further, this negative effect of the men's objectification on women's SSO was strongest for women higher in TSO. The current study uses this same dyadic paradigm to study same-gender, woman-woman interacting pairs. 
 
+##Women Objectifying Women
+Past research investigating women objectifying other women has focused on the psychological conditions that led women to objectify women. @harsey2020men found that self-objectification was related to the objectification of women to a similar degree for male and female participants. Along the same lines, @strelan2005women found that the more women self-objectify, the more they objectify other women. Could the process work in the other direction as well, that is, could objectification by a woman produce self-objectification, in a similar manner to objectification by a man? @hill2008examining assessed women’s experiences of objectification from men independently from women’s experiences of objectification from other women. They found that women may be socialized not only to see themselves as objects, but perhaps to see other women as objects as well. This process, however, was not comfirmed to occur during an actual interpersonal interaction. @loughnan2015exploring found that women objectify other women to a greater extent than they objectify men. Women have also been found to objectify (dehumanized) sexualized targets presented as images [@puvia2013being], but very little is known about interpersonal sexual objectification among women and what the proximal effects of this objectification might be. We do know that objectification has more adverse consequences for women than men [@gervais2011you; @moradi2008; @saguyetal2010], however, if women objectify other women, perhaps even to a stronger degree than they objectify men, this woman to woman objectification might have detrimental outcomes.
+
 ##Interpersonal Objectification
-Studies have shown that within social encounters women are gazed at more than men [@briton1995], often times feel ‘looked at’ within interpersonal interactions [@argyle1969; @miles2015stop], and are likely to internalize the objectifying gaze on their physical self [@puvia2013being; @young1979]. Interpersonal objectification has been found to have negative consequences for women. @gervais2011you found that an objectifying gaze by a male interaction partner (confederate) was associated with lower math performance for women, than being objectified by a female interaction partner. Moreover, perhaps the most adverse effect of interpersonal objectificaiton is that being objectified socializes girls and women to treat themselves as objects to be looked at and evaluated [@Bartky; @berger1972; @fredrickson1998swimsuit]. @gervais2020social recently reviewed the research on interpersonal objectification and organized our current theoretical understanding of this process in the Social Interaction Model of Objectification (SIMO). What is clear from @gervais2020social's review is that we know little about women-on-women interpersonal objectification. Could there also be negative consequences of this type of interpersonal objectification? 
+Studies have shown that within social encounters women are gazed at more than men [@briton1995], often times feel ‘looked at’ within interpersonal interactions [@argyle1969; @miles2015stop], and are likely to internalize the objectifying gaze on their physical self [@puvia2013being; @young1979]. Interpersonal objectification has been found to have negative consequences for women. @gervais2011you found that an objectifying gaze by a male interaction partner (confederate) was associated with lower math performance for women, than being objectified by a female interaction partner. Perhaps the most adverse negative consequence of interpersonal objectificaiton is that being objectified socializes girls and women to routinely treat themselves as objects to be looked at and evaluated [@Bartky; @berger1972; @fredrickson1998swimsuit]. @gervais2020social recently reviewed the research on interpersonal objectification and organized our current theoretical understanding of this process in the Social Interaction Model of Objectification (SIMO). What is clear from @gervais2020social's review is that we know little about women-on-women interpersonal objectification. Could there also be negative consequences for women of interpersonal objectification by women? 
 
-Interpersonal objectification can also occur within the context of romantic relationships, in addition to interactions with strangers. Among heterosexual male and female college students, self-objectification has been found to be positively associated with the extent to which they objectify their romantic partners [@zurbriggen2011self]. Researchers have also studied interpersonal objectification and self-objectification in romantic relationships [@strelan2018birds]. Evidence is mixed, suggesting that women can sometimes have positive outcomes from appearance valuation within the context of an established romantic relationship. There is also evidence that they experience less SSO after appearance comments within romantic relationships [@meltzer2020women], but less is known about first dates. An important caveat to this literature is that it is only about heterosexual relationships. A recent study has investigated the effect of self-objectification on the reduction of relationship building skills in general (including same-sex friendships) [@teran2020relational]. Both romantic relationships and stranger encounters have been studied in the context of objectification, but neither of these literatures have investigated specifically same-gender relationships.
+Researchers have also studied interpersonal objectification and self-objectification in romantic relationships [@strelan2018birds], in addition to interactions with strangers. Among heterosexual male and female college students, self-objectification has been found to be positively associated with the extent to which they objectify their romantic partners [@zurbriggen2011self]. Evidence is mixed, suggesting that women can sometimes have positive outcomes from appearance valuation within the context of an established romantic relationship. There is also evidence that they experience less SSO after appearance comments within romantic relationships [@meltzer2020women], but less is known about first dates. An important caveat to this literature is that it is only about heterosexual relationships. A recent study has investigated the effect of self-objectification on the reduction of relationship building skills in general (including same-sex friendships) [@teran2020relational]. Both romantic relationships and stranger encounters have been studied in the context of objectification, but neither of these literatures have investigated specifically same-gender relationships.
 
-There is evidence that the experience of state self-objectification in mixed-gender contexts (stranger and romantic) has negative consequences for women, but what about in the context of interactions with other women? Is the self-objectification experienced in mixed-gender interactions associated with the same negative process as that experienced in same-gender interactions? The ample research demonstrating that the male gaze has a particularly detrimental effect for women would suggest no [@saguyetal2010, @calogero2004test; @gervais2011you; @gay2010my; @yilmaz2019whose], but, there is evidence that women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men] and to would be helpful to understand the consequencs of this intragroup objectification for women. When women objectify other women, does it lead to self-objectification in the same way men's objectification of women does [@garcia2016objectification]? If so, does the self-objectification experienced in these same-gender interactions have the same negative consequences for authenticity in that interaction?  
+There is evidence that the experience of state self-objectification in mixed-gender contexts (stranger and romantic) has negative consequences for women, but what about in the context of interactions with other women? Is the self-objectification experienced in mixed-gender interactions associated with the same negative process as that experienced in same-gender interactions? The ample research demonstrating that the male gaze has a particularly detrimental effect for women would suggest no [@saguyetal2010; @calogero2004test; @gervais2011you; @gay2010my; @yilmaz2019whose], but, there is evidence that women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men] and to would be helpful to understand the consequencs of this intragroup objectification for women. When women objectify other women, does it lead to self-objectification in the same way men's objectification of women does [@garcia2016objectification]? If so, does the self-objectification experienced in these same-gender interactions have the same negative consequences for authenticity in that interaction?  
 
 There is some evidence that reduced authenticity is a consequence of self-objectification [@garcia2016objectification; @teran2020relational]. This link has been justified by the literature on stigmatized-stigmatizer interactions [@hebl2005promoting; @richeson2003prejudice; @shelton2005expecting], viewing the experience of being objectified in an interaction as an identity threat situation [@miles2015stop; @nadal2012effects]. Further, empirical evidence reveals that objectification manifests through inauthenticity in romantic relationships [@brunelletal2010], adverse attitudes in regard to career aspirations, and a decrease in concentration and impairment in female cognitive performance [@kahalon2018don; @quinnetal]. When a woman is objectified by a man, and subsequently experiences self-objectification, the intergroup nature of this encounter might trigger identity threat. Thus, perhaps there are fewer negative consequences when a woman is objectified by another woman, specifically, woman-woman interpersonal objectification processes might diverge from mix-gender interpersonal objectification processes precisely because they are not intergroup interactions (at least with respect to gender identity). A woman objectified by another woman may not be having the same negative consequences that cascade from situations that trigger group-based identity threat [@deaux1987putting; @dovidio2006nonverbal; @hebl2005promoting], but feeling like a body, rather than a full human, in any interaction (intergroup or ingroup) may be enough to reduce women's feelings of authenticity and social competence, regardless of the gender of the objectifyer [@tolman2006looking; @teran2020relational].
 
-##Women Objectifying Women
-Past research investigating women objectifying other women has focused on the psychological conditions that led women to objectify women. @harsey2020men found that self-objectification was related to the objectification of women to a similar degree for male and female participants. Along the same lines, @strelan2005women found that the more women self-objectify, the more they objectify other women. Could the process work in the other direction as well, that is, could objectification by a woman produce self-objectification, in a similar manner to objectification by a man? @hill2008examining assessed women’s experiences of objectification from men independently from women’s experiences of objectification from other women. They found that women may be socialized not only to see themselves as objects, but perhaps to see other women as objects as well. This process, however, was not comfirmed to occur during an actual interpersonal interaction. @loughnan2015exploring found that women objectify other women to a greater extent than they objectify men. Women have also been found to objectify (dehumanized) sexualized targets presented as images [@puvia2013being], but very little is known about interpersonal sexual objectification among women and what the proximal effects of this objectification might be. We do know that objectification has more adverse consequences for women than men [@gervais2011you; @moradi2008; @saguyetal2010], however, if women objectify other women, perhaps even to a stronger degree than they objectify men, this woman to woman objectification might have detrimental outcomes. 
-
 ##The Current Study
-In the current study, we sought to examine what occurs during an interaction in which one or both partners are objectifying each other, similarly to @garcia2016objectification, but between same-gender interpersonal interactions among women. Moreover, the current study uses a face-to-face interaction paradigm and dyadic data analysis techniques to examine the effects for both women simultaneously. Although the literature on woman-woman objectification is small, the results are mixed, and does not cover interpersonal encourters, we expected to replicate some of the results found in @garcia2016objectification. Most importantly, we predicted that being objectified by one’s interaction partner would lead to self-objectification. We also expected that TSO would moderate this relationship, amplifying the positive assocaition between being objectified and SSO for women higher in TSO. We hypothesized that SSO would, in turn, lead to feelings of inauthenticity [although there is ample support against this prediction from the identity threat within intergroup interactions literature; @rollero2016bringing]. Further, we hypothesized that these feelings of inauthencity would then be associated with reduced feelings of agency in romantic relationships, reduced career aspiration, and reduced cognitive performance. In summary, we expected to find a positive relationship between other-objectification by one's partner and state self-objectification. We also expected to find a negative relationship between self-state objectification and interaction authenticity, and that interaction authenticity will be positively related to cognitive performance, relationship agency, and career aspirations.
+In the current study, we sought to examine what occurs during an interaction in which one or both partners are objectifying each other, similarly to @garcia2016objectification, but between same-gender interpersonal interactions among women. Moreover, the current study uses a face-to-face interaction paradigm and dyadic data analysis techniques to examine the effects for both women simultaneously. Although the literature on woman-woman objectification is small, the results are mixed, and does not cover interpersonal encourters, we expected to replicate some of the results found in @garcia2016objectification. Most importantly, we predicted that being objectified by one’s interaction partner would lead to self-objectification. We also expected that TSO would moderate this relationship, amplifying the positive assocaition between being objectified and SSO for women higher in TSO. Here we would like to note that @puvia2013being would alternatively predict that women's tendency to self-objectify (TSO) leads them to objectify other women (more precisely, to dehumanize a sexualized woman). In addition, @strelan2005women and @harsey2020men would predict the TSO to other-objectification link, further theorizing that this relationships is mediated by the woman's own state self-objectification (SSO). This limited, but extant, set of literature on woman-woman objectification points to a possible alternative model from the model hypothesized in the current study. Where appropriate, we report results considering the causal directions implied by this alternative mediation model.
 
-These hypotheses are considered exploratory, given the lack of prior research theorizing about these linkages.
-
-Here we would like to note that @puvia2013being would alternatively predict that women's tendency to self-objectify (TSO) leads them to objectify other women (more precisely, to dehumanize a sexualized woman). In addition, @strelan2005women and @harsey2020men would predict the TSO to other-objectification link, further theorizing that this relationships is mediated by the woman's own state self-objectification (SSO). This limited, but extant, set of literature on woman-woman objectification points to a possible alternative model from the model hypothesized in the current study. Where appropriate, we report results considering the causal directions implied by this alternative mediation model.
+We also tested whether SSO would, in turn, lead to feelings of inauthenticity. The investigation of the SSO - inauthenticity connection is considered exploratory given the lack of support for this connection from the literature on identity threat in intragroup interactions [@rollero2016bringing] but support for this connection in the objectification literature [@garcia2016objectification; @teran2020relational]. Regardless of whether there was an association between SSO and inauthenticity, we hypothesized that feelings of inauthencity would be associated with reduced feelings of agency in romantic relationships, reduced career aspiration, and reduced cognitive performance. In summary, we expected to find a positive relationship between other-objectification by one's partner and state self-objectification. We also expected to find a negative relationship between self-state objectification and interaction authenticity, and that interaction authenticity will be positively related to cognitive performance, relationship agency, and career aspirations.
 
 # Methods
 
@@ -119,7 +119,7 @@ ns <- clarksmith_women %>%
   as.matrix() %>% as.numeric()
 ```
 
-Data from two demographically similar higher education institutions in the Northeast United States were combined to create the final analysis sample (*N =* `r nrow(clarksmith_women)`) used in this study. In the measures section that follows we refer to them as Sample 1 and Sample 2. Thirty-two previously unacquainted self-identifying female dyads (64 total participants) from institutions in the Northeast of the United States participated in this study. Sample 1 (*N =* `r ns[3]`) is from a co-ed liberal arts college and Sample 2 (*N =* `r ns[4]`) is from a women’s liberal arts college. More specifically, twelve of the pairs were students at a co-ed liberal arts college, while the remaining twenty pairs attended a women’s liberal arts college. [Footnote: Initially, data was collected from same-sex and mixed-sex dyads that comprised of male and female gendered individuals. Sample 1 originally consisted of twenty-two pairs, twelve men and thirty-two women. Twenty-three pairs made up of forty-three women and one man, as well as two participants who did not identify with either gender category, formed Sample 2. For consistency, we limited participant data to same sex female pairs at the two colleges.] All results presented below are from models including sample as a control variable.
+Thirty-two previously unacquainted dyads of self-identifying women participated in this study. Data from two demographically similar higher education institutions in the Northeast United States were combined to create the final analysis sample (*N =* `r nrow(clarksmith_women)`) used in this study. In the measures section that follows we refer to them as Sample 1 and Sample 2.  Sample 1 (*N =* `r ns[3]`) is from a co-ed liberal arts college and Sample 2 (*N =* `r ns[4]`) is from a women’s liberal arts college. More specifically, twelve of the pairs were students at a co-ed liberal arts college, while the remaining twenty pairs attended a women’s liberal arts college.^[Initially, data was collected from both same-gender and mixed-gender dyads at both institutions. Sample 1 originally consisted of 22 pairs, 12 men and 32 women. In Sample 2 there were 23 pairs made up of 43 women and one man, as well as two participants who did not identify with either gender category. To investigate only same-gender pairs of women, we limited participant data to women in both samples.] All results presented below are from models including sample as a control variable.
 
 ```{r demographics}
 #favstats(~TSO_A, data=clarksmith_women)
