--- a/references.bib
+++ b/references.bib
@@ -269,6 +269,13 @@ doi = {10.1177/0956797609357751}
   publisher={American Psychological Association}
 }
 
+@book{kenny2006dyadic,
+  title={Dyadic data analysis},
+  author={Kenny, David A and Kashy, Deborah A and Cook, William L},
+  year={2006},
+  publisher={Guilford press}
+}
+
 @article{peugh2013analyzing,
   title={Analyzing mixed-dyadic data using structural equation models},
   author={Peugh, James L and DiLillo, David and Panuzio, Jillian},
@@ -311,7 +318,17 @@ doi = {10.1177/0956797609357751}
 }
 
 @article{Kaschak, title={Engendered lives: a new psychology of womens experience}, volume={30}, DOI={10.5860/choice.30-4102}, number={07}, journal={Choice Reviews Online}, year={1993}}
-@article{robertsfredrickson, title={Objectification Theory}, DOI={10.4135/9781412956253.n377}, journal={Encyclopedia of Social Psychology}, author={Roberts, Tomi-Ann and Fredrickson, Barbara L.}, year={1997}}
+
+@article{robertsfredrickson,
+  title={Objectification theory: Toward understanding women's lived experiences and mental health risks},
+  author={Fredrickson, Barbara L and Roberts, Tomi-Ann},
+  journal={Psychology of women quarterly},
+  volume={21},
+  number={2},
+  pages={173--206},
+  year={1997},
+  publisher={Wiley Online Library}
+}
 
 @article{swimetal, title={Everyday Sexism: Evidence for Its Incidence, Nature, and Psychological Impact From Three Daily Diary Studies}, volume={57}, DOI={10.1111/0022-4537.00200}, number={1}, journal={Journal of Social Issues}, author={Swim, Janet K. and Hyers, Lauri L. and Cohen, Laurie L. and Ferguson, Melissa J.}, year={2001}, pages={31–53}}
 @article{Bartky, title = {Femininity and Domination Studies in the Phenomenology of Oppression},year = {1990},author = {Sandra Lee Bartky}}
